tests/baselines/reference/classMemberInitializerScoping(strict=true).errors.txt
classMemberInitializerScoping.ts(3,17): error TS2301: Initializer of instance member variable 'y' cannot reference identifier 'aaa' declared in the constructor.
classMemberInitializerScoping.ts(5,17): error TS7006: Parameter 'aaa' implicitly has an 'any' type.
classMemberInitializerScoping.ts(6,9): error TS2322: Type 'string' is not assignable to type 'number'.
classMemberInitializerScoping.ts(14,17): error TS7006: Parameter 'aaaa' implicitly has an 'any' type.


==== classMemberInitializerScoping.ts (4 errors) ====
    var aaa = 1;
    class CCC {
        y: number = aaa;
                    ~~~
!!! error TS2301: Initializer of instance member variable 'y' cannot reference identifier 'aaa' declared in the constructor.
        static staticY: number = aaa; // This shouldnt be error
        constructor(aaa) {
                    ~~~
!!! error TS7006: Parameter 'aaa' implicitly has an 'any' type.
            this.y = ''; // was: error, cannot assign string to number
            ~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
        }
    }
    
    // above is equivalent to this:
    var aaaa = 1;
    class CCCC {
        y: any;
        constructor(aaaa) {
                    ~~~~
!!! error TS7006: Parameter 'aaaa' implicitly has an 'any' type.
            this.y = aaaa;
            this.y = '';
        }
    }
     
    